# OTA_RL78

./: CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  OTA_RL78_main.c  client.crt  client.key  component.mk
main/HW_Interface/BLE/: BLE_handler.c  BLE_handler.h  BleControl.c  BleControl.h  ble control.txt
main/HW_Interface/ExternalWatchdog/: WatchDog.c  WatchDog.h
main/HW_Interface/Flash_Driver/: FlashHandle.h  FlashHandler.c
main/HW_Interface/GPIO/: OutputControl.c  OutputControl.h
main/HW_Interface/UartVoice/: UartVoice.c  UartVoice.h
main/HW_Interface/Wifi/: Wifi_handler.c  Wifi_handler.h
main/IRO_Handle/IRO_MCU/: IroControl.c  IroControl.h  UART_Handler.c  UART_Handler.h
main/SW_Interface/DateTime/: DateTime.c  DateTime.h
main/SW_Interface/Mqtt/: MKP_W_Protocol.c  MKP_W_Protocol.h  MqttHandler.c  MqttHandler.h
main/SW_Interface/OTA/: BLD_mcu.c  BLD_mcu.h  BLD_mcuVoice.c  BLD_mcuVoice.h  BLD_mcu_rx.c  BLD_mcu_rx.h  HttpHandler.c  HttpHandler.h  OTA_http.c  OTA_http.h
main/SW_Interface/WifiConfig/: gateway_config.c  gateway_config.h
main/Utility/: Global.h  HTG_Utility.c  HTG_Utility.h  timeCheck.c  timeCheck.h
main/template/: header_file.h  source_file.c
