idf_component_register(SRCS     "OTA_RL78_main.c"
                                HW_Interface/BLE/BLE_handler.c 
								HW_Interface/BLE/BleControl.c 
								HW_Interface/Flash_Driver/FlashHandler.c 
								HW_Interface/GPIO/OutputControl.c 
								HW_Interface/Wifi/Wifi_handler.c 
								HW_Interface/ExternalWatchDog/WatchDog.c 
								HW_Interface/UartVoice/UartVoice.c
								IRO_Handle/IRO_MCU/UART_Handler.c
								IRO_Handle/IRO_MCU/IroControl.c
								SW_Interface/OTA/HttpHandler.c 
								SW_Interface/DateTime/DateTime.c 
								SW_Interface/Mqtt/MKP_W_Protocol.c 
                                SW_Interface/Mqtt/MqttHandler.c 
								SW_Interface/OTA/OTA_http.c
								SW_Interface/OTA/BLD_mcu.c 
								SW_Interface/OTA/BLD_mcu_rx.c
								SW_Interface/OTA/BLD_mcuVoice.c
								SW_Interface/WifiConfig/gateway_config.c 
								Utility/HTG_Utility.c 
								Utility/timeCheck.c 
                    INCLUDE_DIRS "."
                                HW_Interface/BLE 
								HW_Interface/GPIO
								HW_Interface/Wifi
								HW_Interface/Flash_Driver 
								HW_Interface/ExternalWatchDog
								HW_Interface/UartVoice 
								IRO_Handle
								IRO_Handle/IRO_MCU
								SW_Interface 
								SW_Interface/DateTime 
								SW_Interface/Mqtt 
								SW_Interface/OTA 
								SW_Interface/WifiConfig  
								Utility)			
